# build-nanogpt

./: .gitignore  fineweb.py  hellaswag.py  play.ipynb  pyproject.toml  train_gpt2.py  train_gpt2_output.txt
