[project]
name = "build-nanogpt"
version = "0.1.0"
description = "Reproduction of GPT-2 124M parameter model"
authors = [
    {name = "Chinmay Pani",email = "chinmaypani42@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "torch (>=2.9.1,<3.0.0)",
    "torchvision (>=0.24.1,<0.25.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=25.11.0,<26.0.0)"
]
