[tool.poetry]
name = "build-nanogpt"
version = "0.1.0"
description = "Reproduction of GPT-2 124M parameter model"
authors = ["Chinmay Pani <chinmaypani42@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.14,<3.15"
transformers = ">=4.57.3,<5.0.0"
tiktoken = ">=0.12.0,<0.13.0"
torch = {version = ">=2.9.1,<3.0.0", source = "pytorch-cuda"}

[tool.poetry.group.dev.dependencies]
black = ">=25.11.0,<26.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu130"
priority = "explicit"