[tool.poetry]
name = "build-nanogpt"
version = "0.1.0"
description = "Reproduction of GPT-2 124M parameter model"
authors = ["Chinmay Pani <chinmaypani42@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
transformers = ">=4.57.3,<5.0.0"
tiktoken = ">=0.12.0,<0.13.0"
torch = {version = ">=2.9.1,<3.0.0", source = "pytorch-cuda"}
triton = {version = "^3.5.1", markers = "sys_platform == 'linux'"}
triton-windows = {version = "^3.5.1.post21", markers = "sys_platform == 'win32'"}

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = ">=25.11.0,<26.0.0"}
ipykernel = "^7.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu130"
priority = "explicit"